--- a/test/cloudformation-demo.Tests/cloudformation-demo.Tests.csproj
+++ b/test/cloudformation-demo.Tests/cloudformation-demo.Tests.csproj
@@ -13,6 +13,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\cloudformation-demo\cloudformation-demo.csproj" />
+    <ProjectReference Include="..\..\src\certibox.forms.dculus\certibox.forms.dculus.csproj" />
   </ItemGroup>
 </Project>
